--- a/ZmqDebuggerTool/MainWindow.xaml
+++ b/ZmqDebuggerTool/MainWindow.xaml
@@ -8,33 +8,11 @@
         mc:Ignorable="d"
         Title="Zmq调试工具" Height="600" Width="900" Loaded="Window_Loaded">
     <TabControl Margin="10">
-        <TabItem Header="TCP Client">
+        <TabItem Header="Zmq Request">
             <view:ZmqRequestView x:Name="zmqView"/>
         </TabItem>
-        <TabItem Header="Old">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="40*"/>
-                    <ColumnDefinition Width="20*"/>
-                    <ColumnDefinition Width="20*"/>
-                    <ColumnDefinition Width="59*"/>
-                    <ColumnDefinition Width="22*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="40"/>
-                    <RowDefinition Height="261*"/>
-                    <RowDefinition Height="134*"/>
-                </Grid.RowDefinitions>
-                <ComboBox x:Name="cmbAddress" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="Center" Width="180" Height="30" IsEditable="True" SelectedIndex="0">
-                    <ComboBoxItem Content="tcp://localhost:5000"/>
-                    <ComboBoxItem Content="tcp://*:2000"/>
-                </ComboBox>
-                <Button x:Name="btnSub" Grid.Column="1" Click="btnSub_Click" Content="订阅" Height="30" Width="80" Margin="10,5,10,5"/>
-                <Button x:Name="btnSetSend" Grid.Column="2" Click="btnSetSend_Click" Content="设置" Height="30" Width="80" Margin="10,5,10,5"/>
-                <TextBox x:Name="txtLog" Grid.Row="1" Grid.ColumnSpan="5" VerticalScrollBarVisibility="Visible" Grid.RowSpan="1" Margin="5,5,5,5"/>
-                <TextBox x:Name="txtSend" Grid.Row="2" Grid.ColumnSpan="4" Margin="5,5,5,5"/>
-                <Button x:Name="btnSend" Grid.Column="4" Grid.Row="2" Click="btnSend_Click" Height="30" Width="80" Content="发送" Margin="15,52,15,52" />
-            </Grid>
+        <TabItem Header="Zmq Subscribe">
+            <view:ZmqSubscriberView x:Name="zmqSubView"/>
         </TabItem>
     </TabControl>
     
