--- a/ZmqDebuggerTool/View/ZmqPublisherView.xaml
+++ b/ZmqDebuggerTool/View/ZmqPublisherView.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="ZmqDebuggerTool.View.ZmqSubscriberView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ZmqDebuggerTool.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
+﻿<UserControl x:Class="ZmqDebuggerTool.View.ZmqPublisherView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:ZmqDebuggerTool.View"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
@@ -21,8 +22,6 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition />
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -42,12 +41,13 @@
                 Grid.ColumnSpan="1"
                 Margin="5,0,5,0"
                 Height="21"
+                Text="tcp://*:2000"
                 VerticalAlignment="Center"
-                VerticalContentAlignment="Center" TextChanged="txtAddress_TextChanged"/>
+                VerticalContentAlignment="Center"/>
 
                 <Button Grid.Row="0"
                 x:Name="btnConnect"
-                Content="连接"
+                Content="绑定"
                 Grid.Column="2"
                 Width="80"
                 Height="21"
@@ -56,8 +56,6 @@
                 Margin="0,0,0,0"
                 Click="btnConnect_Click">
                 </Button>
-                <CheckBox x:Name="chbSubscriber" VerticalAlignment="Center" VerticalContentAlignment="Center" Margin="5" Content="订阅" Grid.Column="3"/>
-                <CheckBox x:Name="chbCompress" VerticalAlignment="Center" VerticalContentAlignment="Center" Margin="5" Content="解压" Grid.Column="4"/>
             </Grid>
         </GroupBox>
         <GroupBox Header="接收:" Grid.Row="1">
