--- a/ZmqDebuggerTool/View/ZmqView.xaml
+++ b/ZmqDebuggerTool/View/ZmqView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="ZmqDebuggerTool.View.ZmqPublisherView"
+﻿<UserControl x:Class="ZmqDebuggerTool.View.ZmqView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:ZmqDebuggerTool.View"
-      mc:Ignorable="d" 
+      xmlns:local="clr-namespace:ZmqDebuggerTool.View" xmlns:b="clr-namespace:Microsoft.VisualBasic;assembly=Microsoft.VisualBasic"
+             mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
@@ -62,17 +62,24 @@
         <GroupBox Header="接收:" Grid.Row="1">
             <Grid>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="5*"/>
                     <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="50"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="100"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="26"/>
                 </Grid.RowDefinitions>
 
-                <TextBox x:Name="txtRec" Margin="0,0,0,0"  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"/>
-                <Button Content="clear" HorizontalAlignment="Right" VerticalAlignment="Center" Width="80" Height="21" Grid.Row="1" Grid.Column="3"/>
+                <TextBox x:Name="txtRec" Margin="2"  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" VerticalScrollBarVisibility="Visible">
+                </TextBox>
+                <Label Content="订阅主题：" Grid.Row="1" />
+                <TextBox x:Name="txtTopic" Margin="2"  Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1"/>
+                <RadioButton x:Name="radRecText" Content="Text" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="2" IsChecked="True"/>
+                <RadioButton x:Name="radRecHex" Content="Hex" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="3" />
+                <Button x:Name="btnClear" Content="clear" HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Height="21" Grid.Row="1" Grid.Column="4" Margin="15,0,0,0" Click="btnClear_Click"/>
             </Grid>
         </GroupBox>
 
@@ -93,8 +100,8 @@
                 <RadioButton Content="Hex" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" Grid.Row="1" Grid.Column="2" IsChecked="{Binding HexSelected}"/>
                 <ComboBox x:Name="cmbCmds" Grid.Row="1" Margin="0,0,5,0" Width="200" Height="21" HorizontalAlignment="Right" SelectionChanged="cmbCmds_SelectionChanged" ItemsSource="{Binding OrderItems}" DisplayMemberPath="Title"/>
                 <Button x:Name="btnSend" HorizontalAlignment="Center"  Content="发送" Grid.Row="1" Grid.Column="4"  Width="80" Height="21" Command="{Binding SendCommand}"/>
-                
-                
+
+
             </Grid>
 
         </GroupBox>
