--- a/ZmqDebuggerTool/View/ZmqView.xaml
+++ b/ZmqDebuggerTool/View/ZmqView.xaml
@@ -62,7 +62,7 @@
         <GroupBox Header="接收:" Grid.Row="1">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="120"/>
                     <ColumnDefinition Width="5*"/>
                     <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="50"/>
@@ -75,7 +75,7 @@
 
                 <TextBox x:Name="txtRec" Margin="2"  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" VerticalScrollBarVisibility="Visible">
                 </TextBox>
-                <Label Content="订阅主题：" Grid.Row="1" />
+                <Label Content="订阅主题(空格分割)：" Grid.Row="1" />
                 <TextBox x:Name="txtTopic" Margin="2"  Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1"/>
                 <RadioButton x:Name="radRecText" Content="Text" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="2" IsChecked="True"/>
                 <RadioButton x:Name="radRecHex" Content="Hex" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="3" />
