--- a/CommnuiactionDebuggerTool/Views/CommunicationView.xaml
+++ b/CommnuiactionDebuggerTool/Views/CommunicationView.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="ZmqDebuggerTool.View.ZmqView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:ZmqDebuggerTool.View" xmlns:b="clr-namespace:Microsoft.VisualBasic;assembly=Microsoft.VisualBasic"
+﻿<UserControl x:Class="CommnuiactionDebuggerTool.Views.CommunicationView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:CommnuiactionDebuggerTool.Views"
              mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800">
-
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
@@ -29,33 +28,31 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0"
-                Grid.Column="0"
-                Content="Address:"
-                Padding="0"
-                   VerticalContentAlignment="Center"
-                Margin="0 0 10 0"/>
+            Grid.Column="0"
+            Content="Address:"
+            Padding="0"
+               VerticalContentAlignment="Center"
+            Margin="0 0 10 0"/>
 
                 <TextBox Grid.Row="0"
-                x:Name="txtAddress"
-                Grid.Column="1"                                  
-                Grid.ColumnSpan="1"
-                Margin="5,0,5,0"
-                Height="21"
-                Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                VerticalAlignment="Center"
-                VerticalContentAlignment="Center"
-                TextChanged="txtAddress_TextChanged"/>
+            x:Name="txtAddress"
+            Grid.Column="1"                                  
+            Grid.ColumnSpan="1"
+            Margin="5,0,5,0"
+            Height="21"
+            Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            VerticalAlignment="Center"
+            VerticalContentAlignment="Center"/>
 
-                <Button Grid.Row="0" Command="{Binding ConnectCommand}"
-                x:Name="btnConnect"
-                Content="绑定"
-                Grid.Column="2"
-                Width="80"
-                Height="21"
-                VerticalAlignment="Center"
-                VerticalContentAlignment="Center"
-                Margin="0,0,0,0"
-                Click="btnConnect_Click">
+        <Button Grid.Row="0"
+            x:Name="btnConnect"
+            Content="绑定"
+            Grid.Column="2"
+            Width="80"
+            Height="21"
+            VerticalAlignment="Center"
+            VerticalContentAlignment="Center"
+            Margin="0,0,0,0">
                 </Button>
             </Grid>
         </GroupBox>
@@ -81,7 +78,7 @@
                 <RadioButton x:Name="radRecText" Content="Text" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="2" IsChecked="True"/>
                 <RadioButton x:Name="radRecHex" Content="Hex" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="3" />
                 <RadioButton x:Name="radLength" Content="Length" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="4" />
-                <Button x:Name="btnClear" Content="clear" HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Height="21" Grid.Row="1" Grid.Column="5" Margin="15,0,0,0" Click="btnClear_Click"/>
+                <Button x:Name="btnClear" Content="clear" HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Height="21" Grid.Row="1" Grid.Column="5" Margin="15,0,0,0"/>
             </Grid>
         </GroupBox>
 
@@ -100,7 +97,7 @@
                 <TextBox x:Name="txtSend" Grid.Row="0" Margin="5,5,5,5" Grid.ColumnSpan="5" Text="{Binding SendMsg,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <RadioButton Content="Text" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" Grid.Row="1" Grid.Column="1" IsChecked="{Binding TextSelected}"/>
                 <RadioButton Content="Hex" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0" Grid.Row="1" Grid.Column="2" IsChecked="{Binding HexSelected}"/>
-                <ComboBox x:Name="cmbCmds" Grid.Row="1" Margin="0,0,5,0" Width="200" Height="21" HorizontalAlignment="Right" SelectionChanged="cmbCmds_SelectionChanged" ItemsSource="{Binding OrderItems}" DisplayMemberPath="Title"/>
+                <ComboBox x:Name="cmbCmds" Grid.Row="1" Margin="0,0,5,0" Width="200" Height="21" HorizontalAlignment="Right" ItemsSource="{Binding OrderItems}" DisplayMemberPath="Title"/>
                 <Button x:Name="btnSend" HorizontalAlignment="Center"  Content="发送" Grid.Row="1" Grid.Column="4"  Width="80" Height="21" Command="{Binding SendCommand}"/>
 
 
