--- a/CommnuiactionDebuggerTool/MainWindow.xaml
+++ b/CommnuiactionDebuggerTool/MainWindow.xaml
@@ -6,8 +6,46 @@
         xmlns:local="clr-namespace:CommnuiactionDebuggerTool" 
         xmlns:views="clr-namespace:CommnuiactionDebuggerTool.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="1000">
+    <Window.Resources>
+        <BitmapImage x:Key="imgKey" UriSource="pack://application:,,,/CommnuiactionDebuggerTool;component/Images/zmq.ico"/>
+        <BitmapImage x:Key="imgTool" UriSource="pack://application:,,,/CommnuiactionDebuggerTool;component/Images/Tools-1种尺寸.ico"/>
+        <!--UriSource可以使用相对路径-->
+    </Window.Resources>
+    
     <Grid>
-        <views:CommunicationView/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <ToolBarTray DockPanel.Dock="Top">
+            <ToolBar HorizontalAlignment="Left" Grid.Row="0">
+                <Button x:Name="zmqDebug" Width="65" Click="zmqDebug_Click">
+                    <StackPanel Orientation="Vertical">
+                        <Image x:Name="img1" Height="30" Source="{StaticResource imgKey}"/>
+                        <TextBlock Margin="2">ZMQ调试</TextBlock>
+                    </StackPanel>
+
+                </Button>
+                <Button Width="65">
+                    <StackPanel Orientation="Vertical">
+                        <Image  Height="30" Source="{StaticResource imgTool}"/>
+                        <TextBlock Margin="2">其它配置</TextBlock>
+                    </StackPanel>
+                </Button>
+            </ToolBar>
+        </ToolBarTray>
+        <Image Source="{StaticResource imgKey}" Height="40" Grid.Row="1"/>
+
+        <TabControl Grid.Row="1">
+            <TabItem Header="网口">
+                <views:CommunicationView/>
+            </TabItem>
+            <TabItem Header="串口">
+                <views:CommunicationView/>
+            </TabItem>
+        </TabControl>
+        
+       
     </Grid>
 </Window>
