--- a/CommnuiactionDebuggerTool/Views/ScoketConfigView.xaml
+++ b/CommnuiactionDebuggerTool/Views/ScoketConfigView.xaml
@@ -20,17 +20,7 @@
 
             <Label Grid.Row="0" Grid.Column="0" Content="Address:" VerticalContentAlignment="Center" Margin="0 0 10 0"/>
 
-            <TextBox Grid.Row="0" x:Name="txtAddress" Grid.Column="1" Grid.ColumnSpan="1" Margin="5,0,5,0" Height="21" Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  VerticalAlignment="Center" VerticalContentAlignment="Center"/>
-
-            <Button Grid.Row="0"
-            x:Name="btnConnect"
-            Content="绑定"
-            Grid.Column="2"
-            Width="80"
-            Height="21"
-            VerticalAlignment="Center"
-            VerticalContentAlignment="Center"
-            Margin="0,0,0,0"/>
+            <TextBox Grid.Row="0" x:Name="txtAddress" Grid.Column="1" Grid.ColumnSpan="1" Margin="5,0,5,0" MinWidth="200" Height="21" Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  VerticalAlignment="Center" VerticalContentAlignment="Center"/>
 
         </Grid>
     </Grid>
