--- a/CommnuiactionDebuggerTool/Views/CommunicationView.xaml
+++ b/CommnuiactionDebuggerTool/Views/CommunicationView.xaml
@@ -24,7 +24,7 @@
         </Grid.ColumnDefinitions>
         <GroupBox x:Name="gbConnect"  Header="Connect" HorizontalAlignment="Left" Width="auto" Margin="5">
             <StackPanel x:Name="spConfig" Orientation="Horizontal">
-                <Button x:Name="btnConnect" Content="Connect" Height="21" Margin="5" Click="btnConnect_Click"/>
+                <Button x:Name="btnConnect" Content="Connect" Height="21" Width="60" Margin="5" Click="btnConnect_Click"/>
             </StackPanel>
         </GroupBox>
         <GroupBox Header="接收:" Grid.Row="1">
@@ -42,13 +42,11 @@
                     <RowDefinition Height="35"/>
                 </Grid.RowDefinitions>
 
-                <TextBox x:Name="txtRec" Margin="2"  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" VerticalScrollBarVisibility="Visible" FontSize="18" Text="">
+                <TextBox x:Name="txtRec" Margin="2"  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" VerticalScrollBarVisibility="Visible" FontSize="16" Text="">
                 </TextBox>
                 <Label Content="订阅主题(空格分割)：" Grid.Row="1" VerticalAlignment="Center"/>
                 <TextBox x:Name="txtTopic" Margin="2"  Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1"/>
-                <RadioButton x:Name="radRecText" Content="Text" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="2" IsChecked="True"/>
-                <RadioButton x:Name="radRecHex" Content="Hex" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="3" />
-                <RadioButton x:Name="radLength" Content="Length" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="4" />
+                <CheckBox x:Name="chbLength" Content="Length" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="4" />
                 <Button x:Name="btnClear" Content="清空" Click="btnClear_Click" Width="80" Height="21" Grid.Row="1" Grid.Column="5" Margin="15,2,0,0"/>
             </Grid>
         </GroupBox>
@@ -62,17 +60,15 @@
 
                 <TextBox x:Name="txtSend" Grid.Row="0" Margin="5,5,5,5" Grid.ColumnSpan="5" Text="{Binding SendMsg,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <RadioButton x:Name="chbSendText" Content="Text" Style="{StaticResource StackPanelMarginStyle}" HorizontalAlignment="Center" Width="50" VerticalAlignment="Center" IsChecked="{Binding TextSelected}"/>
-                    <RadioButton x:Name="chbSendHex" Content="Hex" Style="{StaticResource StackPanelMarginStyle}" HorizontalAlignment="Center" Width="50" VerticalAlignment="Center" Grid.Row="1" Grid.Column="2"/>
+
                     <ComboBox x:Name="cmbCmds" Style="{StaticResource StackPanelMarginStyle}" Grid.Row="1"  Width="200" Height="21" HorizontalAlignment="Right" ItemsSource="{Binding OrderItems}" DisplayMemberPath="Title"/>
                     <Button x:Name="btnCrc" Style="{StaticResource StackPanelMarginStyle}" HorizontalAlignment="Center"  Content="CRC"  Width="80" Height="21" Click="btnCrc_Click"/>
                     <Label Content="发送间隔(ms):" VerticalAlignment="Center"/> 
                     <TextBox x:Name="txtTimsSpan" Text="1000" Width="100" Margin="10,0,10,0" Height="21"/>
                     <CheckBox x:Name="chbTimer" Content="定时发送" VerticalAlignment="Center" Checked="chbTimer_Checked"/>
-                    <StackPanel VerticalAlignment="Center">
-                        <Button x:Name="btnSend" Style="{StaticResource StackPanelMarginStyle}" HorizontalAlignment="Center"  Content="发送" Width="80" Height="21" Click="btnSend_Click" Margin="3"/>
+                    <CheckBox x:Name="chbIsHex" Style="{StaticResource StackPanelMarginStyle}" Content="Hex" VerticalAlignment="Center" Checked="chbTimer_Checked"/>
+                    <Button x:Name="btnSend" Style="{StaticResource StackPanelMarginStyle}" HorizontalAlignment="Center"  Content="发送" Width="80" Height="21" Click="btnSend_Click" Margin="3"/>
                     </StackPanel>
-                </StackPanel>
 
             </Grid>
 
