--- a/CommnuiactionDebuggerTool/Views/CommunicationView.xaml
+++ b/CommnuiactionDebuggerTool/Views/CommunicationView.xaml
@@ -24,7 +24,8 @@
         </Grid.ColumnDefinitions>
         <GroupBox x:Name="gbConnect"  Header="Connect" HorizontalAlignment="Left" Width="auto" Margin="5">
             <StackPanel x:Name="spConfig" Orientation="Horizontal">
-                <Button x:Name="btnConnect" Content="Connect" Height="21" Width="60" Margin="5" Click="btnConnect_Click"/>
+                <Button x:Name="btnConnect" Content="连接" Height="21" Width="60" Margin="5" Click="btnConnect_Click"/>
+                <Button x:Name="btnDisConnect" Content="断开" Height="21" Width="60" Margin="5" Click="btnDisConnect_Click"/>
             </StackPanel>
         </GroupBox>
         <GroupBox Header="接收:" Grid.Row="1">
@@ -45,8 +46,8 @@
                 <TextBox x:Name="txtRec" Margin="2"  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" VerticalScrollBarVisibility="Visible" FontSize="16" Text="">
                 </TextBox>
                 <Label Content="订阅主题(空格分割)：" Grid.Row="1" VerticalAlignment="Center"/>
-                <TextBox x:Name="txtTopic" Margin="2"  Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1"/>
-                <CheckBox x:Name="chbLength" Content="Length" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Grid.Column="4" />
+                <TextBox x:Name="txtTopic" Margin="2" Height="21"  Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1"/>
+                <CheckBox x:Name="chbLength" Content="Length" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="4" />
                 <Button x:Name="btnClear" Content="清空" Click="btnClear_Click" Width="80" Height="21" Grid.Row="1" Grid.Column="5" Margin="15,2,0,0"/>
             </Grid>
         </GroupBox>
