--- a/CommnuiactionDebuggerTool/Views/CommunicationView.xaml
+++ b/CommnuiactionDebuggerTool/Views/CommunicationView.xaml
@@ -8,16 +8,17 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <!-- 定义一个名为StackPanelMarginStyle的样式 -->
-        <Style x:Key="StackPanelMarginStyle" TargetType="FrameworkElement">
+        <Style x:Key="StackPanelMarginStyle" TargetType="Control">
             <!-- 设置默认的Margin -->
-            <Setter Property="Margin" Value="5,0,5,0"/>
+            <Setter Property="Margin" Value="5,0,5,0"/> 
+            <Setter Property="VerticalContentAlignment"  Value="Center"/>
         </Style>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
             <RowDefinition Height="3*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="160"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
 
@@ -43,8 +44,7 @@
                     <RowDefinition Height="35"/>
                 </Grid.RowDefinitions>
 
-                <TextBox x:Name="txtRec" Margin="2"  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" VerticalScrollBarVisibility="Visible" FontSize="16" Text="">
-                </TextBox>
+                <RichTextBox x:Name="txtRec" Margin="2"  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="6" VerticalScrollBarVisibility="Visible" FontSize="14"/> 
                 <Label Content="订阅主题(空格分割)：" Grid.Row="1" VerticalAlignment="Center"/>
                 <TextBox x:Name="txtTopic" Margin="2" Height="21"  Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1"/>
                 <CheckBox x:Name="chbLength" Content="Length" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="4" />
@@ -59,18 +59,16 @@
                     <RowDefinition Height="35"/>
                 </Grid.RowDefinitions>
 
-                <TextBox x:Name="txtSend" Grid.Row="0" Margin="5,5,5,5" Grid.ColumnSpan="5" Text="{Binding SendMsg,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox x:Name="txtSend" Margin="2"/>
                 <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
-
                     <ComboBox x:Name="cmbCmds" Style="{StaticResource StackPanelMarginStyle}" Grid.Row="1"  Width="200" Height="21" HorizontalAlignment="Right" ItemsSource="{Binding OrderItems}" DisplayMemberPath="Title"/>
                     <Button x:Name="btnCrc" Style="{StaticResource StackPanelMarginStyle}" HorizontalAlignment="Center"  Content="CRC"  Width="80" Height="21" Click="btnCrc_Click"/>
-                    <Label Content="发送间隔(ms):" VerticalAlignment="Center"/> 
-                    <TextBox x:Name="txtTimsSpan" Text="1000" Width="100" Margin="10,0,10,0" Height="21"/>
+                    <Label Content="发送间隔(ms):" VerticalAlignment="Center"/>
+                    <TextBox x:Name="txtTimsSpan"  Style="{StaticResource StackPanelMarginStyle}" Text="1000"  Width="100" Margin="10,0,10,0" Height="21"/>
                     <CheckBox x:Name="chbTimer" Content="定时发送" VerticalAlignment="Center" Checked="chbTimer_Checked"/>
                     <CheckBox x:Name="chbIsHex" Style="{StaticResource StackPanelMarginStyle}" Content="Hex" VerticalAlignment="Center" Checked="chbTimer_Checked"/>
                     <Button x:Name="btnSend" Style="{StaticResource StackPanelMarginStyle}" HorizontalAlignment="Center"  Content="发送" Width="80" Height="21" Click="btnSend_Click" Margin="3"/>
-                    </StackPanel>
-
+                </StackPanel>
             </Grid>
 
         </GroupBox>
