--- a/CommnuiactionDebuggerTool/Views/SerialPortConfigView.xaml
+++ b/CommnuiactionDebuggerTool/Views/SerialPortConfigView.xaml
@@ -7,15 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="1000">
     <StackPanel Orientation="Horizontal">
-        <Label Grid.Row="0" Grid.Column="0" Content="Address:" VerticalContentAlignment="Center"/>
-        <ComboBox Grid.Row="0" x:Name="txtAddress" Grid.Column="1" Width="100" Grid.ColumnSpan="1" Margin="5,0,5,0" Height="21" Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  VerticalAlignment="Center" VerticalContentAlignment="Center"/>
+        <Label Grid.Row="0" Grid.Column="0" Content="串口名:" VerticalContentAlignment="Center"/>
+        <ComboBox Grid.Row="0" x:Name="cmbPortName" Grid.Column="1" Width="100" Grid.ColumnSpan="1" Margin="5,0,5,0" Height="21" Text="{Binding Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  VerticalAlignment="Center" VerticalContentAlignment="Center"/>
         <Label Grid.Row="0" Grid.Column="0" Content="波特率:" VerticalContentAlignment="Center"/>
-        <ComboBox Grid.Row="0" Height="21" Width="100"/>
+        <ComboBox Grid.Row="0" x:Name="cmbBaudRate" Height="21" Width="100"/>
         <Label Grid.Row="0" Grid.Column="0" Content="数据位长度:" VerticalContentAlignment="Center"/>
-        <ComboBox Grid.Row="0" Height="21" Width="100"/>
+        <ComboBox Grid.Row="0" x:Name="cmbDataBits" Height="21" Width="100"/>
         <Label Grid.Row="0" Grid.Column="0" Content="停止位:" VerticalContentAlignment="Center"/>
-        <ComboBox Grid.Row="0" Height="21" Width="100"/>
+        <ComboBox Grid.Row="0" x:Name="cmbStopBits" Height="21" Width="100"/>
         <Label Grid.Row="0" Grid.Column="0" Content="校验位:" VerticalContentAlignment="Center"/>
-        <ComboBox Grid.Row="0" Height="21" Width="100"/>
+        <ComboBox Grid.Row="0" x:Name="cmbParity" Height="21" Width="100"/>
     </StackPanel>
 </UserControl>
